# phase_4_todo

./: .dockerignore  .gitignore  env.example.backend  env.example.frontend
.github/workflows/: ci-cd.yaml
.specify/memory/: constitution.md
charts/todo-backend/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
charts/todo-frontend/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
charts/todo-infrastructure/: Chart.yaml  values.yaml
docker/backend/: .dockerignore  Dockerfile
docker/frontend/: .dockerignore  Dockerfile
k8s/dapr-components/: kafka-pubsub.yaml  kubernetes-secrets.yaml  statestore.yaml
k8s/deployments/: audit-service.yaml  notification-service.yaml  recurring-task-service.yaml  redpanda.yaml  todo-service.yaml  websocket-service.yaml
k8s/secrets/: create-secrets.sh
scripts/: create-secrets.sh  deploy-phase5.sh  deploy.sh  rollback.sh  validate-phase5.sh  validate.sh
services/audit-service/: .env.example  Dockerfile  alembic.ini  requirements.txt
services/notification-service/: .env.example  Dockerfile  alembic.ini  requirements.txt
services/recurring-task-service/: .env.example  Dockerfile  alembic.ini  requirements.txt
services/shared/: pyproject.toml
services/shared/shared/: __init__.py  config.py  dapr_helpers.py  events.py  health.py  logging.py
services/todo-service/: .env.example  Dockerfile  alembic.ini  requirements.txt
services/websocket-service/: .env.example  Dockerfile  requirements.txt
specs/001-k8s-deployment/: data-model.md  plan.md  quickstart.md  (+3 more)
(+110 files in other folders)
