# Task: T002 — Shared library package metadata and dependencies
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "1.0.0"
description = "Shared library for Phase 5 microservices"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "dapr>=1.16.0,<2.0",
    "dapr-ext-fastapi>=1.16.0,<2.0",
    "fastapi>=0.110.0,<1.0",
    "python-json-logger>=2.0,<3.0",
]

[tool.setuptools.packages.find]
include = ["shared*"]
